update security to include the allowed origins